--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
     "version": "1.0.0",
     "main": "src/server.js",
     "scripts": {
-      "start": "node src/server.js",
-      "dev": "nodemon src/server.js",
-      "test": "mocha",
-      "build:css": "npx tailwindcss -i ./src/public/css/styles.css -o ./src/public/css/output.css"
+        "start": "node src/server.js",
+        "dev": "nodemon --watch src --watch public --exec node src/server.js",
+        "test": "mocha",
+        "build:css": "npx tailwindcss -i ./src/public/css/styles.css -o ./src/public/css/output.css"
     },
     "dependencies": {
-      "dotenv": "^10.0.0",
-      "express": "^4.17.1",
-      "express-validator": "^6.10.0",
-      "helmet": "^4.6.0",
-      "morgan": "^1.10.0",
-      "redis": "^3.1.2",
-      "sanitize-html": "^2.4.0",
-      "express-rate-limit": "^5.5.1"
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-rate-limit": "^5.5.1",
+        "express-validator": "^6.10.0",
+        "helmet": "^4.6.0",
+        "morgan": "^1.10.0",
+        "redis": "^3.1.2",
+        "sanitize-html": "^2.4.0"
     },
     "devDependencies": {
-      "tailwindcss": "^2.2.19",
-      "mocha": "^9.1.3",
-      "chai": "^4.3.4",
-      "nodemon": "^2.0.12"
+        "chai": "^4.3.4",
+        "mocha": "^9.1.3",
+        "nodemon": "^2.0.22",
+        "tailwindcss": "^2.2.19"
     }
-  }
-  
+}
