--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
         "build:css": "npx tailwindcss -i ./src/public/css/styles.css -o ./src/public/css/output.css"
     },
     "dependencies": {
+        "axios": "^1.7.2",
+        "compression": "^1.7.4",
         "dotenv": "^10.0.0",
-        "express": "^4.17.1",
+        "ejs": "^3.1.10",
+        "express": "^4.19.2",
+        "express-async-handler": "^1.2.0",
         "express-rate-limit": "^5.5.1",
         "express-validator": "^6.10.0",
         "helmet": "^4.6.0",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "redis": "^3.1.2",
         "sanitize-html": "^2.4.0"
     },
